Overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,7 @@ header {
   padding: 10px 12px 15px 12px;
   margin-bottom: 16px;
   overflow: auto;
+  white-space: nowrap;
 }
 
 .summary-hole-item {
@@ -211,6 +212,7 @@ header {
 .summary-hole-item-middle {
   margin-top: 14px;
   overflow: auto;
+  white-space: nowrap;
   margin-right: 10px;
 }
 
@@ -257,6 +259,7 @@ header {
   font-size: 20px;
   letter-spacing: -6%;
   line-height: 34px;
+  white-space: nowrap;
 }
 
 .hole-info-segment {
@@ -267,6 +270,7 @@ header {
   text-align: right;
   line-height: 34px;
   overflow: auto;
+  white-space: nowrap;
   margin-left: 50px;
 }
 
@@ -306,7 +310,8 @@ header {
   font-size: 22px;
   line-height: 64px;
   margin-left: 12px;
-  overflow: auto;
+  overflow: scroll;
+  white-space: nowrap;
   margin-right: 10px;
 }
 
@@ -366,7 +371,8 @@ header {
 }
 
 .scoreboard-name {
-  overflow: auto;
+  overflow-x: scroll;
+  white-space: nowrap;
   margin-right: 12px;
   line-height: 55px;
 }
